Fixes design issues with responsiveness on mobile

--- a/assets/css/event-fragment.styl
+++ b/assets/css/event-fragment.styl
@@ -108,8 +108,6 @@
         width 75%
 
     .partner-logo
-        height 80px
-
-    .stackcommerce
-        width 300px
-        height auto
+        padding 30px
+        max-height 100px
+        max-width 180px
